<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/margem"
    tools:context=".MainActivity"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edtNome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edtEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/edtTelefone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        />

    <Switch
        android:id="@+id/swtWhats"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textOff="@string/nao"
        android:textOn="@string/sim"
        android:text="@string/whats"
        android:textSize="16sp"
        android:textColor="@android:color/tertiary_text_dark"


        tools:ignore="UseSwitchCompatOrMaterialXml"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/periodo"
        android:textSize="16sp"
        android:layout_marginTop="@dimen/margem"
        />

    <RadioGroup
        android:id="@+id/rdbPeriodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/rdbManha"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/manha"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/rdbTarde"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/tarde"
            android:layout_weight="1"
            />

        <RadioButton
            android:id="@+id/rdbNoite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/noite"
            android:layout_weight="1"
            />
    </RadioGroup>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/preferencia"
        android:textSize="16sp"
        />
    <CheckBox
        android:id="@+id/chkInternet"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/internet"
        android:textSize="16sp"
        android:textColor="@android:color/tertiary_text_dark"
        />
    <CheckBox
        android:id="@+id/chkTelefone"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        android:textSize="16sp"
        android:textColor="@android:color/tertiary_text_dark"
        />
    <CheckBox
        android:id="@+id/chkTvACabo"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/tvACabo"
        android:textSize="16sp"
        android:textColor="@android:color/tertiary_text_dark"
        />
    <CheckBox
        android:id="@+id/chkStreaming"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:text="@string/Streaming"
        android:textSize="16sp"
        android:textColor="@android:color/tertiary_text_dark"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <Button
            android:id="@+id/btnLimpar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/limpar"
            android:textSize="16sp"
            android:layout_margin="@dimen/margem"
            />
        <Button
            android:id="@+id/btnConfirmar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="@dimen/margem"
            android:text="@string/confirmar"
            android:textSize="16sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/lblDados"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/teal_200"
        android:padding="@dimen/margem"
        >
        <TextView
            android:id="@+id/txtNome"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtTelefone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtWhats"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtPeriodo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />
        <TextView
            android:id="@+id/txtPreferencia"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="16sp"
            />


    </LinearLayout>

</androidx.appcompat.widget.LinearLayoutCompat>